# Are-Binns-just-GNNs-

./: 01_graph_preparation.ipynb  02_binn_exact_equivalence.ipynb  03_training_and_comparison.ipynb  BINN_GINN_clean_graphprep_v2.ipynb  BINN_GINN_phase3_to6_visual_equivalence_tcga_v3.ipynb  BINN_vs_GNN_TCGA_comparison (2).ipynb  BINN_vs_GNN_TCGA_comparison.ipynb  BINN_vs_GNN_TCGA_comparison_UPDATED.ipynb  CONTRIBUTING.md  Copy_of_BINN_vs_GNN_TCGA_comparison.ipynb  DATASET.md  PyG_GCN_GAT_sanity_check_RAW_graph.ipynb  README.md  auto_push.sh  binn_vs_gnn_tcga_comparison.ipynb  requirements.txt
binn_gnn_repo_ready/: .gitignore  README.md  pyproject.toml
binn_gnn_repo_ready/.github/workflows/: tests.yml
binn_gnn_repo_ready/notebooks/: 01_graph_preparation.ipynb  02_binn_exact_equivalence.ipynb  03_training_and_comparison.ipynb  BINN_vs_GNN_TCGA_comparison.ipynb  BINN_vs_GNN_TCGA_comparison_UPDATED.ipynb  PyG_GCN_GAT_raw_graph_improve_auc_focal.ipynb  PyG_GCN_GAT_sanity_check.ipynb  PyG_GCN_GAT_sanity_check_RAW_graph.ipynb  binn_vs_gnn_tcga_comparison_updated.py  gnn_train_fixed.ipynb  graph_prep_fixed.ipynb
binn_gnn_repo_ready/src/binn_gnn/: __init__.py  config.py
binn_gnn_repo_ready/src/binn_gnn/experiments/: __init__.py  train.py
binn_gnn_repo_ready/src/binn_gnn/graph/: __init__.py  build_raw.py  layerize.py  null_models.py  schedule.py
binn_gnn_repo_ready/src/binn_gnn/models/: __init__.py  dag.py  layered.py
binn_gnn_repo_ready/tests/: test_depth_schedule.py  test_directed_swap.py  test_equivalence_layered.py
