[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binn-gnn"
version = "0.1.0"
description = "Reference implementation: BINNs as (special cases of) GNNs, with reproducible ablations"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Contributors"}]
license = {text = "MIT"}

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "torch>=2.0",
  "scikit-learn>=1.3",
  "tqdm>=4.66",
  "networkx>=3.2",
  "pyarrow>=14.0",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
pyg = [
  "torch-geometric",  # install following the official PyG instructions for your torch/cuda build
]



dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
